# xbox360eva

./: CMakeLists.txt  Makefile.xenon  README.md
docs/: GAME_DESIGN_RU.md
platform/xenon/: Math3D.h  ThirdPersonCamera.h  XenonInput.cpp  XenonInput.h  XenonRenderer.cpp  XenonRenderer.h  main_xenon.cpp
src/: Dungeon.cpp  Dungeon.h  Game.cpp  Game.h  main.cpp
tools/: extract_libxenon_cube_shaders.py
