cmake_minimum_required(VERSION 3.16)
project(eva_pink_kingdom LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(eva_pink_kingdom
    src/main.cpp
    src/Dungeon.cpp
    src/Game.cpp
)

target_include_directories(eva_pink_kingdom PRIVATE src)

if(MSVC)
    target_compile_options(eva_pink_kingdom PRIVATE /W4 /permissive-)
else()
    target_compile_options(eva_pink_kingdom PRIVATE -Wall -Wextra -Wpedantic)
endif()
